# rustcrawl

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  wikipedia_crawl.json
.github/workflows/: ci.yml  docker.yml
crates/rustcrawl-cli/: Cargo.toml
crates/rustcrawl-cli/src/: cli.rs  jobs.rs  main.rs  progress.rs
crates/rustcrawl-core/: Cargo.toml
crates/rustcrawl-core/benches/: core_hot_paths.rs
crates/rustcrawl-core/src/: config.rs  engine.rs  error.rs  fetcher.rs  filter.rs  frontier.rs  lib.rs  normalize.rs  page.rs  parser.rs  robots.rs  sink.rs  sitemap.rs  stats.rs
crates/rustcrawl-core/tests/: crawl.rs
crates/rustcrawl-core/tests/support/: mod.rs
deploy/helm/rustcrawl/: .helmignore  Chart.yaml  values.yaml
deploy/helm/rustcrawl/templates/: NOTES.txt  _helpers.tpl  cronjob.yaml  job.yaml  pvc.yaml
deploy/kubernetes/: cronjob.yaml  job.yaml  kustomization.yaml
