[package]
name = "rustcrawl-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for the rustcrawl web crawler."
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lints]
workspace = true

[[bin]]
name = "rustcrawl"
path = "src/main.rs"

[dependencies]
rustcrawl-core.workspace = true
tokio.workspace = true
url.workspace = true
clap.workspace = true
humantime.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde.workspace = true
chrono.workspace = true
ratatui = "0.29.0"
crossterm = "0.28.1"
